--- a/index.html
+++ b/index.html
@@ -11,124 +11,148 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          ><span class="logo-clr">Web</span>Studio</a
-        >
-        <ul class="nav-list">
-          <li><a href="" class="current">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="nav-link">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav>
+          <a href="./index.html" class="logo"
+            ><span class="logo-clr">Web</span>Studio</a
+          >
+          <ul class="nav-list">
+            <li><a href="" class="current">Studio</a></li>
+            <li><a href="./portfolio.html">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="nav-link">
+            <li>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-logo">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-btn">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="hero-logo">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-btn">Order Service</button>
+        </div>
       </section>
       <section>
-        <h2 hidden>features</h2>
-        <ul class="features-list">
-          <li>
-            <h3 class="section-subtitle">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-subtitle">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-subtitle">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-subtitle">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container features-container">
+          <h2 hidden>features</h2>
+          <ul class="features-list">
+            <li class="about-item">
+              <h3 class="section-subtitle">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="section-subtitle">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="section-subtitle">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="section-subtitle">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
-        <h2 class="section-title">What are we doing</h2>
-        <ul>
-          <li><img src="./images/monitor.jpg" alt="monitor" width="360" /></li>
-          <li>
-            <img src="./images/phonemenu.jpg" alt="phonemenu" width="360" />
-          </li>
-          <li>
-            <img src="./images/phoneinhand.jpg" alt="phoneinhand" width="360" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="img-list">
+            <li class="img-point">
+              <img src="./images/monitor.jpg" alt="monitor" width="360" />
+            </li>
+            <li class="img-point">
+              <img src="./images/phonemenu.jpg" alt="phonemenu" width="360" />
+            </li>
+            <li class="img-point">
+              <img
+                src="./images/phoneinhand.jpg"
+                alt="phoneinhand"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="our-team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-person">
-            <img
-              src="./images/MarkGuerrero.jpg"
-              alt="MarkGuerrero"
-              width="264"
-            />
-            <h3 class="section-subtitle">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li class="team-person">
-            <img src="./images/tomford.jpg" alt="tomford" width="264" />
-            <h3 class="section-subtitle">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li class="team-person">
-            <img
-              src="./images/camilagarcia.jpg"
-              alt="camilagarcia"
-              width="264"
-            />
-            <h3 class="subtitle">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="team-person">
-            <img
-              src="./images/danielwilson.jpg"
-              alt="danielwilson"
-              width="264"
-            />
-            <h3 class="section-subtitle">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-person">
+              <img
+                src="./images/MarkGuerrero.jpg"
+                alt="MarkGuerrero"
+                width="264"
+              />
+              <h3 class="section-subtitle person-subtitle">Mark Guerrero</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li class="team-person">
+              <img src="./images/tomford.jpg" alt="tomford" width="264" />
+              <h3 class="section-subtitle person-subtitle">Tom Ford</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li class="team-person">
+              <img
+                src="./images/camilagarcia.jpg"
+                alt="camilagarcia"
+                width="264"
+              />
+              <h3 class="section-subtitle person-subtitle">Camila Garcia</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="team-person">
+              <img
+                src="./images/danielwilson.jpg"
+                alt="danielwilson"
+                width="264"
+              />
+              <h3 class="section-subtitle person-subtitle">Daniel Wilson</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
-      <a href="./index.html" class="logo"
-        ><span class="logo-clr">Web</span
-        ><span class="logo-clr-foot">Studio</span></a
-      >
-      <p class="foot-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a href="./index.html" class="logo"
+          ><span class="logo-clr">Web</span
+          ><span class="logo-clr-foot">Studio</span></a
+        >
+        <p class="foot-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
