--- a/portfolio.html
+++ b/portfolio.html
@@ -11,160 +11,190 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
-      <nav class="nav">
-        <a href="./index.html" class="logo"
-          ><span class="logo-clr">Web</span>Studio</a
-        >
-        <ul class="nav-list">
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html" class="current">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="nav-link">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="nav">
+          <a href="./index.html" class="logo"
+            ><span class="logo-clr">Web</span>Studio</a
+          >
+          <ul class="nav-list">
+            <li><a href="./index.html">Studio</a></li>
+            <li><a href="./portfolio.html" class="current">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="nav-link">
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section>
-        <h1 hidden>Our portfolio</h1>
-        <!-- Fiter buttons -->
-        <ul>
-          <li><button type="button" class="filter-btn">All</button></li>
-          <li><button type="button" class="filter-btn">Web Site</button></li>
-          <li><button type="button" class="filter-btn">App</button></li>
-          <li><button type="button" class="filter-btn">Design</button></li>
-          <li><button type="button" class="filter-btn">Marketing</button></li>
-        </ul>
-        <!-- Project examples  -->
-        <ul>
-          <li class="project-link">
-            <a href="#">
-              <img
-                src="./images/portfolio-1.jpg"
-                alt="mobapplication"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-subtitle">Banking App Interface Concept</h2>
-              <p class="text">App</p>
-            </a>
-          </li>
-          <li class="project-link">
-            <a href="#">
-              <img
-                src="./images/portfolio-2.jpg"
-                alt="paypass"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-subtitle">Cashless Payment</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li class="project-link">
-            <a href="#">
-              <img
-                src="./images/portfolio-3.jpg"
-                alt="laptop"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-subtitle">Meditaion App</h2>
-              <p class="text">App</p>
-            </a>
-          </li>
-          <li class="project-link">
-            <a href="#">
-              <img
-                src="./images/portfolio-4.jpg"
-                alt="taxiservice"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-subtitle">Taxi Service</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li class="project-link">
-            <a href="#">
-              <img
-                src="./images/portfolio-5.jpg"
-                alt="screenillustrations"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-subtitle">Screen Illustrations</h2>
-              <p class="text">Design</p>
-            </a>
-          </li>
-          <li class="project-link">
-            <a href="#">
-              <img
-                src="./images/portfolio-6.jpg"
-                alt="onlinecourse"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-subtitle">Online Courses</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li class="project-link">
-            <a href="#">
-              <img
-                src="./images/portfolio-7.jpg"
-                alt="instastories"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-subtitle">Instagram Stories Concept</h2>
-              <p class="text">Design</p>
-            </a>
-          </li>
-          <li class="project-link">
-            <a href="#">
-              <img
-                src="./images/portfolio-8.jpg"
-                alt="organicfood"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-subtitle">Organic Food</h2>
-              <p class="text">Web Site</p>
-            </a>
-          </li>
-          <li class="project-link">
-            <a href="#">
-              <img
-                src="./images/portfolio-9.jpg"
-                alt="freshcoffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-subtitle">Fresh Coffee</h2>
-              <p class="text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 hidden>Our portfolio</h1>
+          <!-- Fiter buttons -->
+          <ul class="btn-list">
+            <li><button type="button" class="filter-btn">All</button></li>
+            <li><button type="button" class="filter-btn">Web Site</button></li>
+            <li><button type="button" class="filter-btn">App</button></li>
+            <li><button type="button" class="filter-btn">Design</button></li>
+            <li><button type="button" class="filter-btn">Marketing</button></li>
+          </ul>
+          <!-- Project examples  -->
+          <ul class="project-list">
+            <li class="project-link">
+              <a href="#">
+                <img
+                  src="./images/portfolio-1.jpg"
+                  alt="mobapplication"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-container">
+                  <h2 class="section-subtitle">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-link">
+              <a href="#">
+                <img
+                  src="./images/portfolio-2.jpg"
+                  alt="paypass"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-container">
+                  <h2 class="section-subtitle">Cashless Payment</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-link">
+              <a href="#">
+                <img
+                  src="./images/portfolio-3.jpg"
+                  alt="laptop"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-container">
+                  <h2 class="section-subtitle">Meditaion App</h2>
+                  <p class="text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-link">
+              <a href="#">
+                <img
+                  src="./images/portfolio-4.jpg"
+                  alt="taxiservice"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-container">
+                  <h2 class="section-subtitle">Taxi Service</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-link">
+              <a href="#">
+                <img
+                  src="./images/portfolio-5.jpg"
+                  alt="screenillustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-container">
+                  <h2 class="section-subtitle">Screen Illustrations</h2>
+                  <p class="text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-link">
+              <a href="#">
+                <img
+                  src="./images/portfolio-6.jpg"
+                  alt="onlinecourse"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-container">
+                  <h2 class="section-subtitle">Online Courses</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-link">
+              <a href="#">
+                <img
+                  src="./images/portfolio-7.jpg"
+                  alt="instastories"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-container">
+                  <h2 class="section-subtitle">Instagram Stories Concept</h2>
+                  <p class="text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-link">
+              <a href="#">
+                <img
+                  src="./images/portfolio-8.jpg"
+                  alt="organicfood"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-container">
+                  <h2 class="section-subtitle">Organic Food</h2>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-link">
+              <a href="#">
+                <img
+                  src="./images/portfolio-9.jpg"
+                  alt="freshcoffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-container">
+                  <h2 class="section-subtitle">Fresh Coffee</h2>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
-      <a href="./index.html" class="logo"
-        ><span class="logo-clr">Web</span
-        ><span class="logo-clr-foot">Studio</span></a
-      >
-      <p class="foot-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a href="./index.html" class="logo"
+          ><span class="logo-clr">Web</span
+          ><span class="logo-clr-foot">Studio</span></a
+        >
+        <p class="foot-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
