--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             ><span class="logo-clr">Web</span>Studio</a
           >
           <ul class="nav-list">
-            <li><a href="" class="current">Studio</a></li>
-            <li><a href="./portfolio.html">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
+            <li>
+              <a href="" class="current nav-point">Studio</a>
+            </li>
+            <li><a href="./portfolio.html" class="nav-point">Portfolio</a></li>
+            <li><a href="" class="nav-point">Contacts</a></li>
           </ul>
         </nav>
         <address>
@@ -53,8 +55,8 @@
           <button type="button" class="hero-btn">Order Service</button>
         </div>
       </section>
-      <section>
-        <div class="container features-container">
+      <section class="features">
+        <div class="container">
           <h2 hidden>features</h2>
           <ul class="features-list">
             <li class="about-item">
@@ -88,7 +90,7 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="images">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="img-list">
@@ -148,8 +150,8 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div class="container footer-container">
+    <footer class="footer">
+      <div class="container">
         <a href="./index.html" class="logo"
           ><span class="logo-clr">Web</span
           ><span class="logo-clr-foot">Studio</span></a
