--- a/portfolio.html
+++ b/portfolio.html
@@ -20,26 +20,32 @@
   <body>
     <header>
       <div class="container header-container">
-        <nav class="nav">
+        <nav>
           <a href="./index.html" class="logo"
             ><span class="logo-clr">Web</span>Studio</a
           >
           <ul class="nav-list">
-            <li><a href="./index.html">Studio</a></li>
-            <li><a href="./portfolio.html" class="current">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
+            <li>
+              <a href="./index.html" class="nav-point">Studio</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="current nav-point">Portfolio</a>
+            </li>
+            <li><a href="" class="nav-point">Contacts</a></li>
           </ul>
         </nav>
         <address>
           <ul class="nav-link">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
             <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
       </div>
     </header>
     <main>
-      <section>
+      <section class="portfolio-section">
         <div class="container">
           <h1 hidden>Our portfolio</h1>
           <!-- Fiter buttons -->
@@ -184,8 +190,8 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div class="container footer-container">
+    <footer class="footer">
+      <div class="container">
         <a href="./index.html" class="logo"
           ><span class="logo-clr">Web</span
           ><span class="logo-clr-foot">Studio</span></a
