--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo logo-footer"
           ><span class="logo-clr">Web</span
           ><span class="logo-clr-foot">Studio</span></a
         >
